<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:id="@id/bg_dvr" android:layout_width="548.0px" android:layout_height="530.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="468.0px">
        <LinearLayout android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0px">
            <TextView android:textSize="26.0px" android:textColor="#383a3d" android:layout_gravity="center" android:id="@id/tv_dvr_title" android:layout_width="wrap_content" android:layout_height="30.0px" android:text="@string/pma_dvr_title" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="34.0px">
            <ImageView android:layout_gravity="center" android:id="@id/img_dvr" android:layout_width="120.0px" android:layout_height="120.0px" android:src="@drawable/pma_icon_dvr_on_night" />
            <TextView android:textSize="24.0px" android:textColor="#383a3d" android:layout_gravity="center" android:id="@id/tv_dvr_text" android:layout_width="wrap_content" android:layout_height="40.0px" android:layout_marginTop="16.0px" android:text="@string/textID_camera_setting_dvr2" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/sound_recording" android:background="#383a3d" android:layout_width="436.0px" android:layout_height="64.0px" android:layout_marginTop="24.0px">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/img_sound_recording" android:layout_width="36.0px" android:layout_height="36.0px" android:src="@drawable/pma_icon_dvr_mic_night" />
                <TextView android:textSize="24.0px" android:textColor="#ffffff" android:layout_gravity="center_vertical" android:id="@id/tv_sound_recording" android:layout_width="wrap_content" android:layout_height="40.0px" android:text="@string/pma_dvr_sound_recording" android:layout_marginStart="16.0px" />
            </LinearLayout>
            <Button android:textSize="24.0px" android:textColor="#ffffff" android:id="@id/open_albums" android:background="#383a3d" android:layout_width="436.0px" android:layout_height="64.0px" android:layout_marginTop="24.0px" android:text="@string/pma_dvr_open_albums" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
