<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/btn_content" android:layout_width="match_parent" android:layout_height="180.0px" android:layout_marginLeft="60.0px" android:layout_marginRight="60.0px"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="24.0px" android:textColor="#ffffff" android:id="@id/btn_charge_state" android:background="@drawable/pma_icon_button" android:layout_width="220.0px" android:layout_height="70.0px" android:layout_marginTop="14.0px" android:text="@string/pma_charge_button_stop_charging" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0px" android:layout_alignParentRight="true">
        <Button android:textSize="24.0px" android:textColor="#ffffff" android:id="@id/btn_power_external_device" android:background="@drawable/pma_icon_button" android:visibility="gone" android:layout_width="220.0px" android:layout_height="70.0px" />
        <TextView android:textSize="24.0px" android:textColor="#ffffff" android:gravity="center" android:id="@id/tv_charge_state" android:layout_width="260.0px" android:layout_height="42.0px" android:layout_marginTop="5.0px" />
        <LinearLayout android:orientation="horizontal" android:id="@id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <TextView android:textSize="23.0px" android:textColor="#949494" android:id="@id/tv_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pma_charge_left_time" />
            <TextView android:textSize="23.0px" android:textColor="#949494" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="80.0px" android:text="@string/pma_charge_left" />
            <TextView android:textSize="30.0px" android:textStyle="bold" android:textColor="#000000" android:id="@id/tv_hour" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0px" />
            <TextView android:textSize="23.0px" android:textColor="#949494" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0px" android:text="h" />
            <LinearLayout android:id="@id/tv_min_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0px">
                <TextView android:textSize="30.0px" android:textStyle="bold" android:textColor="#000000" android:id="@id/tv_min" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="23.0px" android:textColor="#949494" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0px" android:text="min" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/more_24_hour" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="23.0px" android:textColor="#949494" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pma_charge_more_than_24_hour" />
        </LinearLayout>
        <TextView android:textSize="23.0px" android:textColor="#949494" android:id="@id/allmost_fully_charged" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pma_allmost_fully_charged" />
    </LinearLayout>
</RelativeLayout>
