<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.KeyguardPasswordView android:gravity="center" android:orientation="vertical" android:id="@id/keyguard_password_view" android:layout_width="match_parent" android:layout_height="match_parent" androidprv:layout_maxHeight="@dimen/keyguard_security_height" androidprv:layout_maxWidth="@dimen/keyguard_security_width"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/car_padding_2" layout="@layout/keyguard_message_area" />
    <LinearLayout android:theme="?passwordStyle" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <EditText android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/car_body1_size" android:textStyle="normal" android:textColor="?wallpaperTextColor" android:gravity="center_horizontal" android:id="@id/passwordEntry" android:layout_width="@dimen/password_field_width" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="@integer/password_text_view_scale" android:inputType="textPassword" android:imeOptions="actionDone|flagForceAscii" />
        <TextView android:textSize="@dimen/car_body1_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/car_padding_2" android:text="@string/keyguard_enter_your_password" />
        <Button android:layout_gravity="center" android:id="@id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/KeyguardButton" />
        <ImageView android:layout_gravity="end|center" android:id="@id/switch_ime_button" android:background="?android:selectableItemBackground" android:padding="8.0dp" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dp" android:src="@drawable/ic_lockscreen_ime" android:tint="@color/background_protected" android:contentDescription="@string/accessibility_ime_switch_button" />
    </LinearLayout>
    <include android:gravity="center_horizontal" android:layout_gravity="center|bottom" android:orientation="vertical" android:id="@id/keyguard_selector_fade_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dp" layout="@layout/keyguard_eca" />
</com.android.keyguard.KeyguardPasswordView>
